--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="featured-image" data-sr-id="6"
                     style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.3s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.3s;">
                     <div class="image">
-                        <img src="image.jpg" alt="avatar">
+                        <img src="img.jpg" alt="avatar">
                     </div>
                 </div>
 
